--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,4 @@
 *.ttf filter=lfs diff=lfs merge=lfs -text
 *.gif filter=lfs diff=lfs merge=lfs -text
 *.spritefont filter=lfs diff=lfs merge=lfs -text
+*.pdf filter=lfs diff=lfs merge=lfs -text
